feat(frontend): tighten deferred expression routing and callable coverage
- replace generic deferred fallback with explicit remaining expression routes and document the frozen H3 deferred set
- harden callable bind/call coverage across expr and chain analyzers, including blocked receiver and subscript integration cases
- fix shared vararg overload matching so Variant-packed tails accept legal Callable.bind(...) style calls and align fail-closed chain assignment coverage